<resources>
    <string name="app_name">GeoVision Face Recognition</string>
    <string name="toggle_camera">Toggle Camera</string>
    <string name="detect_object">Detect Object</string>
    <string name="load_img1">Load Face One</string>
    <string name="load_img2">Load Face Two</string>
    <string name="fr_run">Run Face Recognition</string>
    <string name="fr_embeddings">FR Results:</string>
    <string name="fr_score">FR Score:</string>
    <string name="fr_runSDK">Run Face SDK</string>
    <string name="SDK_Tflite_embeddings01">SDK TFlite Results 01:</string>
    <string name="SDK_Tflite_embeddings02">SDK TFlite Results 02:</string>
    <string name="SDK_TNN_embeddings03">SDK TNN Results 01:</string>
    <string name="SDK_TNN_embeddings04">SDK TNN Results 02:</string>
    <string name="SDK_score">SDK Score:</string>
</resources>
