<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.amitshekhar.tflite.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:layout_gravity="center|top"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_launcher_background"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewFace01"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@drawable/ic_launcher_foreground"
            android:padding="2dp" />

        <ImageView
            android:id="@+id/imageViewFace02"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@drawable/ic_launcher_foreground"
            android:padding="2dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="231dp"
        android:layout_gravity="center|top"
        android:layout_marginTop="270dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnRunFR"
            android:layout_width="189dp"
            android:layout_height="48dp"
            android:layout_gravity="top|center"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="50dp"
            android:text="@string/fr_run"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textViewFRResult"
            android:layout_width="match_parent"
            android:layout_height="139dp"
            android:layout_gravity="start"
            android:maxLines="15"
            android:text="@string/fr_embeddings"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="200dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnLoadImg01"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_gravity="top|center"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="50dp"
            android:text="@string/load_img1"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btnLoadImg02"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_gravity="top|center"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="50dp"
            android:text="@string/load_img2"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />


    </LinearLayout>

    <com.wonderkiln.camerakit.CameraView
        android:id="@+id/cameraView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center|top"
        android:visibility="gone"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center|top"
        android:layout_marginTop="300dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imageViewResult"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:padding="2dp" />

        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:fadeScrollbars="false"
            android:gravity="center"
            android:maxLines="15"
            android:scrollbars="vertical"
            android:textColor="@android:color/black"
            android:visibility="gone"/>

    </LinearLayout>


    <Button
        android:id="@+id/btnToggleCamera"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="50dp"
        android:text="@string/toggle_camera"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btnDetectObject"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom|center"
        android:text="@string/detect_object"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:visibility="gone" />





</FrameLayout>